# bintray-debian-upload

./: .travis.yml  ChangeLog  Makefile.am  NEWS  README  configure.ac
misc/: TODO.txt
src/conf/etc/: Makefile.am  bintray-debian-upload.conf.in
src/man/1/: Makefile.am  bin-deb-upl.sh.1.man.in
src/man/5/: Makefile.am  bintray-debian-upload.conf.5.man.in  bintray.conf.5.man.in
src/prg/bash/: Makefile.am  bin-deb-upl.sh.in
